--- a/src/App.css
+++ b/src/App.css
@@ -635,6 +635,15 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 @media (max-width:830px) {
+  .banner h1 {
+    font-size: 25px;
+    font-weight: 700;
+    letter-spacing: 0.8px;
+    line-height: 1;
+    margin-bottom: 20px;
+    display: block;
+  }
+
   .newsletter-bx {
     display: none;
   }
