--- a/src/App.css
+++ b/src/App.css
@@ -565,8 +565,6 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   background-repeat: no-repeat;
 }
 
-
-
 .newsletter-bx {
   background: #FFFFFF;
   border-radius: 10px;
@@ -642,6 +640,10 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     line-height: 1;
     margin-bottom: 20px;
     display: block;
+  }
+  
+  .new-email-bx{
+    display: none;
   }
 }
 
